# epic_events

./: .coverage  .env.example  .gitignore  INSTALLATION.md  README.md  SCHEMA.md  __init__.py  alembic.ini  constants.py  db_config.py  epic_events.py  exceptions.py  models.py  observability.py  pyproject.toml  requirements.txt  utils.py
.github/workflows/: tests.yml
auth/: hashing.py  login.py  logout.py  register.py  utils.py  validators.py
auth/jwt/: config.py  generate_token.py  refresh_token.py  token_storage.py  verify_token.py
crm/: cli.py  controllers.py  models.py  permissions.json  permissions.py
crm/views/: config.py  logo.py  views.py
db/: config.py  create_manager.py  create_tables.py  crud_client.py  crud_contract.py  crud_event.py  crud_user.py
db/tests/unit_tests/: test_create_manager.py  test_create_tables.py
sentry/: config.py  observability.py
src/: conftest.py  exceptions.py  settings.py
src/app/tests/unit_tests/: test_entrypoint.py
src/auth/: decorators.py  hashing.py  login.py  logout.py  permissions.py  policy.py  register.py  settings.py  utils.py  validators.py
src/auth/jwt/: config.py  generate_token.py  refresh_token.py  token_storage.py  verify_token.py
src/auth/tests/unit_tests/: conftest.py  test_hashing.py  test_jwt.py  test_jwt_rollover.py  test_last_login.py  test_login.py  test_logout.py  test_permissions.py  test_permissions_db.py  test_policy.py  test_refresh.py  test_token_storage.py  test_utils.py  test_validators.py
src/business_logic/: client_logic.py  company_logic.py  contract_logic.py  event_logic.py  role_logic.py  user_logic.py
src/business_logic/tests/integration_tests/: test_permissions_integration.py
src/business_logic/tests/unit_tests/: conftest.py  test_client_logic.py  test_company_logic.py  test_contract_logic.py  test_event_logic.py  test_user_logic.py
src/cli/: help.py  main.py  utils.py
src/cli/commands/: auth.py  client.py  company.py  contract.py  database.py  event.py  user.py
src/cli/tests/unit_tests/: conftest.py  (+3 more)
src/controllers/: main_controller.py
src/crm/: models.py
src/crm/controllers/: auth_controller.py  base_manager.py  controllers.py  main_controller.py  managers.py  services.py
src/crm/views/: config.py  helper_view.py  logo.txt  views.py
src/data_access/: config.py  create_manager.py  create_tables.py  repository.py
src/sentry/: observability.py
src/views/: config.py  views.py
(+7 files in other folders)
