[project]
name = "epic-events"
version = "0.1.0"
description = "A CRM app running on a CLI - 100% shell"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "alembic>=1.16.5",
    "bcrypt>=4.3.0",
    "click>=8.1.8",
    "email-validator>=2.3.0",
    "phonenumbers>=9.0.13",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.1",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
    "rich-click>=1.8.9",
    "sentry-sdk>=2.37.0",
    "sqlalchemy>=2.0.43",
]
