[project]
name = "epic-events"
version = "0.1.0"
description = "A CRM app running on a CLI - 100% shell"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "alembic>=1.16.5",
    "bcrypt>=4.3.0",
    "coverage>=7.10.6",
    "email-validator>=2.3.0",
    "flake8>=7.3.0",
    "phonenumbers>=9.0.13",
    "psycopg>=3.2.10",
    "psycopg-binary==3.2.10",
    "pyjwt>=2.10.1",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
    "rich-click>=1.8.9",
    "ruff>=0.13.0",
    "sentry-sdk>=2.37.0",
    "sqlalchemy>=2.0.43",
]

[tool.ruff]
line-length = 100
target-version = "py311"
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-single-line = false
