[project]
name = "epic-events"
version = "1.0.1"
description = "A CRM app running on a CLI - 100% shell"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "alembic>=1.16.5",
  "bcrypt>=5.0.0",
  "clinkey-cli>=1.0.0",
  "coverage>=7.10.7",
  "email-validator>=2.3.0",
  "flake8>=7.3.0",
  "phonenumbers>=9.0.14",
  "psycopg[binary]>=3.2.10",
  "PyJWT>=2.10.1",
  "pytest>=8.4.2",
  "python-dotenv>=1.1.1",
  "rich>=14.1.0",
  "rich-click>=1.9.1",
  "ruff>=0.13.2",
  "sentry-sdk>=2.39.0",
  "sqlalchemy>=2.0.43",
]

[tool.ruff]
line-length = 79
target-version = "py39"
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["epic_events"]
force-single-line = false

[tool.pytest.ini_options]
addopts = "-v --tb=short"
pythonpath = ["."]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "security: marks tests as security-focused tests"
]
